--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <meta charset="utf-8">
     <meta name="description" content="gitのレクチャー">
-    <title>gitレクチャー始めました</title>
+    <title>gitレクチャー</title>
 </html>
