--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
     <meta charset="utf-8">
     <meta name="description" content="gitのレクチャー">
     <title>gitレクチャー</title>
+    <body>
+     <script type="text/javascript" src="./app.js"></script>
+    </body>
 </html>
